--- a/config/base_config.yaml
+++ b/config/base_config.yaml
@@ -1,5 +1,5 @@
 # Experiment settings
-experiment_name: "resnet8_cifar10_baseline"
+experiment_name: "vit_tiny_cifar10_baseline"
 seed: 42
 device: "cuda"  # or "cpu"
 
@@ -10,7 +10,7 @@ num_workers: 4
 train_val_split: 0.9  # 90% train, 10% val from training set
 
 # Model settings
-model: "resnet8"
+model: "vit_tiny"
 num_classes: 10
 
 # Training settings
@@ -20,11 +20,13 @@ eval_every: 10  # Evaluate every N epochs
 
 # Optimizer settings (will override for each experiment)
 optimizer:
-  type: "sgd"  # or "adamw"
+  type: "sgd"  # Options: "sgd", "adamw", "muon"
   lr: 0.1
   momentum: 0.9  # For SGD
   weight_decay: 0.0001
   # betas: [0.9, 0.999]  # For AdamW
+  # nesterov: true  # For Muon
+  # adjust_lr_fn: "original"  # For Muon: "original" or "match_rms_adamw"
 
 # Logging
 log_dir: "./experiments/logs"
