--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,9 @@
+# PyTorch nightly with CUDA support
+--extra-index-url https://download.pytorch.org/whl/nightly/cu128
 torch
 torchvision
+
+# Other dependencies
 numpy
 pyyaml
 trackio
