--- a/config/tiny_muon_optimal.yaml
+++ b/config/tiny_muon_optimal.yaml
@@ -1,4 +1,4 @@
-# Muon Optimal Configuration
+# Muon Optimal Configuration for ViT-Tiny
 # Learning rate optimized for batch size 4096 based on LR sweep results
 # Best validation accuracy: 75.95% (highest among all optimizers)
 experiment_name: "vit_tiny_cifar10_muon_optimal"
@@ -13,12 +13,12 @@ train_val_split: 0.9  # 90% train, 10% val from training set
 
 # Model settings
 model: "vit_tiny"
-model_scale: "tiny"  # ~5M parameters (for backward compatibility)
+model_scale: "tiny"  # ~5M parameters
 num_classes: 10
 
 # Training settings
 batch_size: 4096  # Optimized for this batch size
-num_epochs: 150
+num_epochs: 3
 eval_every: 10  # Evaluate every N epochs
 
 # Muon Optimizer settings (optimized via LR sweep)
