--- a/config/tiny_sgd_optimal.yaml
+++ b/config/tiny_sgd_optimal.yaml
@@ -1,7 +1,7 @@
-# AdamW Optimal Configuration
+# SGD Optimal Configuration for ViT-Tiny
 # Learning rate optimized for batch size 4096 based on LR sweep results
-# Best validation accuracy: 71.49%
-experiment_name: "vit_tiny_cifar10_adamw_optimal"
+# Best validation accuracy: 53.97%
+experiment_name: "vit_tiny_cifar10_sgd_optimal"
 seed: 42
 device: "cuda"  # or "cpu"
 
@@ -13,7 +13,7 @@ train_val_split: 0.9  # 90% train, 10% val from training set
 
 # Model settings
 model: "vit_tiny"
-model_scale: "tiny"  # ~5M parameters (for backward compatibility)
+model_scale: "tiny"  # ~5M parameters
 num_classes: 10
 
 # Training settings
@@ -21,11 +21,11 @@ batch_size: 4096  # Optimized for this batch size
 num_epochs: 150
 eval_every: 10  # Evaluate every N epochs
 
-# AdamW Optimizer settings (optimized via LR sweep)
+# SGD Optimizer settings (optimized via LR sweep)
 optimizer:
-  type: "adamw"
-  lr: 0.001  # Optimal LR found via sweep for batch size 4096
-  betas: [0.9, 0.999]
+  type: "sgd"
+  lr: 0.1  # Optimal LR found via sweep for batch size 4096
+  momentum: 0.9
   weight_decay: 0.0001
 
 # Logging
